k8s/base/II-webapp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/upstream-vhost: $(BMIAPPS_STORAGE_URL)
    nginx.ingress.kubernetes.io/ssl-redirect: "$(STATUS)"
  name: ii
  namespace: consolidator
spec:
  rules:
  - host: '*.$(BASE_IIHOSTNAME)'
    http:
      paths:
      - backend:
          serviceName: consolidator-bmiapps-proxy-v1
          servicePort: 443
        path: /app/consolidator/v1/
        pathType: Prefix
  tls:
  - hosts:
    - '*.instantimpact.com'
    secretName: ii2-tls
