k8s/base/webapp-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: webapp
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/upstream-vhost: $(BMIAPPS_STORAGE_URL)
spec:
  rules:
    - host: "*.$(BASE_HOSTNAME)"
      http:
        paths:
          - path: /app/consolidator/v1(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              serviceName: bmiapps-proxy
              servicePort: 443
  tls:
    - hosts:
        - "*.brandmuscle.net"
      secretName: brandbuilder-tls
